log/build_2021-10-30_19-38-19/controller/stderr.log
  File "/home/ghost/Desktop/dev_ws/install/controller/lib/python3.8/site-packages/controller/coco.py", line 53
    def
       ^
SyntaxError: invalid syntax

